--- a/css/superhero-style.css
+++ b/css/superhero-style.css
@@ -59,7 +59,7 @@ body{
     border: 5px solid white;
     padding: 10px;
     align-self: center;
-    font-size: 70px;
+    font-size: 2em;
     color: white;
     margin: 10px 0px;
 }
