--- a/css/superhero-style.css
+++ b/css/superhero-style.css
@@ -5,6 +5,9 @@ body{
     margin-bottom: 30px;
     font-size: 30px;
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #main-1{
@@ -33,7 +36,7 @@ body{
     background-color: rgb(20, 27, 65);
     padding: 30px;
     box-sizing: border-box;
-    width: 100%;
+    width: 98%;
 }
 
 .hero-img-container{
