--- a/css/superhero-style.css
+++ b/css/superhero-style.css
@@ -103,6 +103,8 @@ body{
 .skill-radius{
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px ;
+    border-top-right-radius: 25px ;
     /* box-shadow: 0px 0px 8px 2px gray; */
 }
 
