--- a/css/favourite-style.css
+++ b/css/favourite-style.css
@@ -103,4 +103,9 @@ label{
         margin-bottom: 20px;
     }
 
+    #nav-bar{
+        justify-content: center;
+        font-size: 20px;
+    }
+
 }
