--- a/css/home-style.css
+++ b/css/home-style.css
@@ -15,6 +15,10 @@ label{
 }
 
 #main-1{
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -46,18 +50,12 @@ label{
 
 
 #search-bar{
-    left: 0px;
-    right: 0px;
-    color: white;
-    font-size: 25px;
-    position: sticky;
-    top: 0px;
+    margin-left: auto;
+    font-size: 30px;
     display: flex;
-    background-image: linear-gradient(90deg,#010332,#100328,#29011C,#43000D,#530005);
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px;
+    box-sizing: border-box;
+    margin-right: 20px;
 }
 
 #superhero-choose{
@@ -66,17 +64,20 @@ label{
 }
 
 #name-input{
-    margin: 5px;
+    padding: 2px 10px;
+    border-radius: 10px;
+    margin: 0px 5px;
     font-size: 20px;
 }
 
 .btn{
     font-size: 20px;
     text-align: center;
+    border-radius: 10px;
     transition: all 0.3s ease-in-out;
     box-shadow: 0px 0px 10px 3px black;
-    border: 2px solid black;
-    padding: 10px;
+    border: 2px solid orange;
+    padding: 5px;
     color: black;
     background-color: whitesmoke;
     cursor: pointer;
@@ -84,9 +85,30 @@ label{
 
 .btn:hover{
     color: whitesmoke;
-    background-color: black;
+    background-color: orange;
 }
 
+#ham-btn{
+    display: none;
+    position: fixed;
+    color: white;
+    right: 20px;
+    top: 20px;
+}
+
+#ham-bar{
+    max-height: 0px;
+    overflow: hidden;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.3s ease-in-out;
+}
+
+#ham-bar .nav-items{
+    padding: 10px;
+    margin-left: auto;
+}
 
 .card-layout{
     cursor: pointer;
@@ -134,15 +156,36 @@ label{
     text-align: center;
 }
 
-@media screen and (max-width : 900px)
-{
+
+
+
+
+@media screen and (max-width : 700px){
     #search-bar{
-        flex-direction: column;
+        margin-left: 0px;
     }
 
-    #superhero-choose{
-        flex-direction: column;
-        margin-bottom: 20px;
+    #name-input{
+        width: 200px;
     }
 
+    #nav-bar{
+        flex-direction: column;
+        
+    }
+
+    #nav-bar .nav-items{
+        display: none;
+    }
+
+    #ham-btn{
+        display: block;
+    }
+}
+
+@media screen and (max-width : 360px){
+    
+    #name-input{
+        width: 150px;
+    }
 }
