--- a/css/home-style.css
+++ b/css/home-style.css
@@ -14,6 +14,14 @@ label{
     text-align: center;
 }
 
+#heading-main{
+    padding: 2px;
+    font-size: 40px;
+    color: white;
+    text-align: center;
+    margin-top: 50px;
+}
+
 #main-1{
     position: sticky;
     top: 0;
@@ -180,6 +188,10 @@ label{
 
     #ham-btn{
         display: block;
+    }
+
+    #heading-main{
+        font-size: 35px;
     }
 }
 
