--- a/css/favourite-style.css
+++ b/css/favourite-style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(11, 16, 39);
+    background-color: white;
     padding: 0px;
     margin: 0px;
     margin-bottom: 30px;
@@ -52,7 +52,8 @@ label{
     min-width: 200px;
     max-width: 300px;
     margin: 30px;
-    box-shadow: 0px 0px 10px 10px black;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     font-weight: 300;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
@@ -60,6 +61,11 @@ label{
     background-color: whitesmoke;
     border: 1px solid lightgray;
 }
+
+.card-layout:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 
 .card-body{
     font-size: 20px;
@@ -90,6 +96,27 @@ label{
 
 .hero-name{
     text-align: center;
+}
+
+#toast-div{
+    color: white;
+    opacity: 0;
+    border-radius: 10px;
+    transition: opacity 0.2s ease-in-out;
+    position: fixed;
+    bottom: 30px;
+    left: 10px;
+    background-color: red;
+    padding: 5px;
+    font-size: 20px;
+    max-width: 150px;
+    text-align: center;
+}
+
+#nothing-here{
+    text-align: center; 
+    margin-top: 30px;
+    display: none;
 }
 
 @media screen and (max-width : 900px)
