--- a/css/home-style.css
+++ b/css/home-style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(11, 16, 39);
+    background-color: white;
     padding: 0px;
     margin: 0px;
     margin-bottom: 30px;
@@ -17,7 +17,7 @@ label{
 #heading-main{
     padding: 2px;
     font-size: 40px;
-    color: white;
+    color: black;
     text-align: center;
     margin-top: 50px;
 }
@@ -124,13 +124,18 @@ label{
     min-width: 200px;
     max-width: 300px;
     margin: 30px;
-    box-shadow: 0px 0px 10px 10px black;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     font-weight: 300;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
     width: 25%;
     background-color: whitesmoke;
     border: 1px solid lightgray;
+}
+
+.card-layout:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .card-body{
@@ -164,7 +169,20 @@ label{
     text-align: center;
 }
 
-
+#toast-div{
+    color: white;
+    opacity: 0;
+    border-radius: 10px;
+    transition: opacity 0.2s ease-in-out;
+    position: fixed;
+    bottom: 30px;
+    left: 10px;
+    background-color: red;
+    padding: 5px;
+    font-size: 20px;
+    max-width: 150px;
+    text-align: center;
+}
 
 
 
